--- a/style.html
+++ b/style.html
@@ -208,25 +208,30 @@
 
     <div id="iconography">
         <div id="icon_left" class="icon_child">
-            <img src="./images/iconography.png" alt="iconography">
+            <img src="./img/teokSad.svg" alt="Teok Sad Icon">
+            <img src="./img/teokOk.svg" alt="Teok Ok Icon">
+            <img src="./img/teokHappy.svg" alt="Teok Happy Icon">
+            <img src="./img/iconJournal.png" alt="Journal Icons">
         </div>
         <div id="icon_right" class="icon_child">
-            <p>For our iconography, we went with colours that are generally found in nature; for this reason, a large
-                emphasis is placed on shades of green. The rounder shapes are visually inviting, they connect well with
-                our logo and also emulate organic shapes typically found outdoors.</p>
-            <p>To create contrast, we used white as a colour for some of the fonts as well as the buttons.</p>
+            <p>For our iconography, the Teok mood icons are for the quizzes, and the icons withn the white box are the
+                 icons for the journal function. For the mood icons, we wanted to match the style of the main logo
+                 and went with no outline strokes and mainly fill colours. </p>
 
-            <p>We chose to use a brighter shade of green for some of the important buttons that must be pressed by the
-                user, so that they stand out among the rest of the content.</p>
-            <p>Green icons with rounded edges were used to exemplify our intention of showcasing organize shapes and
-                colours found in the outdoors.</p>
-            <p>Rounded borders on certain images were also chosen to create the appearance of a button- this familiar
-                design creates a connection to clickability in the users’ mind. </p>
+            <p>The mood icons have colours which correspond to the facial expressions. We went 
+                with semi warm colours that would be pleasing to the eye but envoke a strong feeling.
+            </p>
+
+            <p>For the journal icons, we went with stoke only to help the elements stand out. 
+                Aside from the tools, the colour picker and sticker option have a fill to contrast the tools.
+            </p>
+            <p>The fill of the colour picker will change depending on the colour that is currently in use.</p>
+            <p>There will be text below each icon to enhance the understanding of each function.</p>
             <p><strong>Rules: </strong><br>
-                • Icons must be 50px by 50px <br>
+                • Mood icons are 58px x 44px <br>
                 • All Iconography includes 10px bottom margin <br>
-                • Buttons will have either a background fill of #94D46C
-                OR a background fill #FFFFFF at 50% with a #FFFFFF 2px solid stroke
+                • Journal icons will be all strokes except for the Teok sticker 
+                function and the colour select
             </p>
         </div>
     </div>
