update img, icons, text bio

--- a/style.html
+++ b/style.html
@@ -211,7 +211,12 @@
             <img src="./img/teokSad.svg" alt="Teok Sad Icon">
             <img src="./img/teokOk.svg" alt="Teok Ok Icon">
             <img src="./img/teokHappy.svg" alt="Teok Happy Icon">
-            <img src="./img/iconJournal.png" alt="Journal Icons">
+            <img src="./img/teokMenu.png" alt="Journal Icons">
+            <div id="general_icons">
+                <img src="./img/2iconButtons.png" alt="Journal Icons">
+                <img src="./img/1journalIcon.png" alt="Journal Icons">
+            </div>
+   
         </div>
         <div id="icon_right" class="icon_child">
             <p>For our iconography, the Teok mood icons are for the quizzes, and the icons withn the white box are the
@@ -223,9 +228,25 @@
             </p>
 
             <p>For the journal icons, we went with stoke only to help the elements stand out. 
-                Aside from the tools, the colour picker and sticker option have a fill to contrast the tools.
+                Aside from the tools, the colour picker and sticker option have a fill to contrast the tools. The fill
+                 of the colour picker will change depending on the colour that is currently in use.
             </p>
-            <p>The fill of the colour picker will change depending on the colour that is currently in use.</p>
+            <p>The hamburger menu icon will remain the same throughout. We decided to have Teok included for a more interactive feel. The 
+                users will feel like they are really hanging out with Teok.
+            </p>
+
+            <p>For the buttons, there are two different set of buttons. The main buttons are 
+            listed on top, quiz specific buttons are listed below.</p>
+            <p>    
+                • Main large buttons are 160px x 60px <br>
+                • Quiz large button 200px x 60px <br>
+                • Common button colours are #69A5CA <br>
+                • Start button colours are #9ED292 <br>
+                • If button is inactive or a special variant, 
+                the colour will be 50% opacity of the original. <br>
+                • All button text will use font “Montserrat” and size may vary ffrom 24px, 18px or 14px. 
+            </p>
+
             <p>There will be text below each icon to enhance the understanding of each function.</p>
             <p><strong>Rules: </strong><br>
                 • Mood icons are 58px x 44px <br>
